--- a/ProblemasRegionales/crear.html
+++ b/ProblemasRegionales/crear.html
@@ -73,12 +73,9 @@
                     <input class="form-control" type="text" name="clave" value="">
                 </div>
             </td>
-        </tr>
-
-        <tr>
             <td>
                 <div>
-                    <label>Numero de creditos</label>
+                    <label>Numero de aspirantes permitidos</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
@@ -87,43 +84,29 @@
         <tr>
             <td>
                 <div>
-                    <label>Materias Básicas</label>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
             <td>
                 <div>
-                    <label>Materias Profesionales</label>
+                    <label>Example</label>
+                    <input class="form-control" type="text" name="descripcion" value="">
+                </div>
+            </td>
+            <td>
+                <div>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
 
         </tr>
         <tr>
-            <td>
-                <div>
-                    <label>Materias Optativas</label>
-                    <input class="form-control" type="text" name="descripcion" value="">
-                </div>
-            </td>
-            <td>
-                <div>
-                    <label>Materias Específicas</label>
-                    <input class="form-control" type="text" name="descripcion" value="">
-                </div>
-            </td>
-        </tr>
 
-        <tr>
             <td>
                 <div>
-                    <label>Horas Teóricas</label>
-                    <input class="form-control" type="text" name="descripcion" value="">
-                </div>
-            </td>
-            <td>
-                <div>
-                    <label>Horas Prácticas</label>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
@@ -132,13 +115,28 @@
         <tr>
             <td>
                 <div>
-                    <label>Tipo</label>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
             <td>
                 <div>
-                    <label>Cantidad</label>
+                    <label>Example</label>
+                    <input class="form-control" type="text" name="descripcion" value="">
+                </div>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <div>
+                    <label>Example</label>
+                    <input class="form-control" type="text" name="descripcion" value="">
+                </div>
+            </td>
+            <td>
+                <div>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="descripcion" value="">
                 </div>
             </td>
@@ -146,7 +144,7 @@
         <tr>
             <td>
                 <div>
-                    <label>Calificación mínima aprobatoria</label>
+                    <label>Example</label>
                     <input class="form-control" type="text" name="" value="">
                 </div>
             </td>
