--- a/ProblemasRegionales/listar.html
+++ b/ProblemasRegionales/listar.html
@@ -71,8 +71,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>Licenciatura Comunicacion Humana 2016</td>
-                <td>LCH</td>
+                <td>Innovación</td>
+                <td>Innova2017</td>
                 <td><input onclick="window.location = 'editar.html'" id="BRegistrar" class="btn btn-primary" type="submit" value="Editar"></td>
                 <td><form name=myform>
                     <input type=button id="bdesactivar" class="btn btn-primary" value="Desactivar"
