--- a/aplicar/crear.html
+++ b/aplicar/crear.html
@@ -56,14 +56,14 @@
 
 <div id="container" class="container">
 
-    <h1>Crear Aspirante</h1>
+    <h1>Aplicar</h1>
 
     <table style="width: 100%" class="table table-responsive">
         <tr>
             <td>
                 <div class="form-group">
                     <label for="aspirant_id">Nombre de la empresa o proyecto</label>
-                    <input class="form-control" id="aspirant_id" name="aspirant_id" value="153" type="text">
+                    <input class="form-control" id="aspirant_id" name="aspirant_id" value="" type="text">
                 </div>
             </td>
             <td>
@@ -71,7 +71,7 @@
                     <label for="aspirant_program">Programa</label>
                     <select class="form-control" id="aspirant_program" name="">
                         <option value="">(Seleccione)</option>
-                        <option selected="selected" value="LCH">Licenciatura Comunicación Humana</option>
+                        <option selected="selected" value="LCH">Innovación</option>
                     </select>
                 </div>
             </td>
@@ -107,13 +107,13 @@
             <td>
                 <div class="form-group">
                     <label for="aspirant_birthdate">Correo</label>
-                    <input type="date" class="form-control" data-val="true" data-val-date="The field Fecha de nacimiento must be a date." data-val-required="The Fecha de nacimiento field is required." id="aspirant_birthdate" name="" value="">
+                    <input type="email" class="form-control" data-val="true" data-val-date="The field Fecha de nacimiento must be a date." data-val-required="The Fecha de nacimiento field is required." id="aspirant_birthdate" name="" value="">
                 </div>
             </td>
             <td>
                 <div class="form-group">
                     <label for="aspirant_placeOfBirth">Edad</label>
-                    <input class="form-control" id="aspirant_placeOfBirth" name="" value="Chihuahua" type="text">
+                    <input class="form-control" id="aspirant_placeOfBirth" name="" value="" type="number">
                 </div>
             </td>
         </tr>
@@ -122,13 +122,13 @@
             <td>
                 <div class="form-group">
                     <label for="student_Address">Sexo</label>
-                    <input class="form-control" id="student_Address" name="" value="San Cristobal" type="text">
+                    <input class="form-control" id="student_Address" name="" value="" type="text">
                 </div>
             </td>
             <td>
                 <div class="form-group">
                     <label for="aspirant_interiorNumber">Telefono celular</label>
-                    <input class="form-control" data-val="true" data-val-number="The field Numero interior must be a number." data-val-required="The Numero interior field is required." id="aspirant_interiorNumber" name="" value="4323" type="text">
+                    <input class="form-control" data-val="true" data-val-number="The field Numero interior must be a number." data-val-required="The Numero interior field is required." id="aspirant_interiorNumber" name="" value="" type="number">
                 </div>
             </td>
         </tr>
@@ -243,12 +243,8 @@
                         <label for="aspirant_HearAboutSchool">¿A qué sector pertenece tu idea?</label>
                         <select class="form-control" data-val="true" data-val-number="The field Estado civil de los padres must be a number." data-val-required="The Estado civil de los padres field is required." id="aspirant_HearAboutSchool" name="">
                             <option value="">(Seleccione)</option>
-                            <option value="Referencia">Referencia Personal</option>
-                            <option value="Internet">Internet</option>
-                            <option value="Redes">Redes Sociales</option>
-                            <option value="Impreso">Propaganda Impresa</option>
-                            <option value="Expo">Expo UACH</option>
-                            <option value="Visita">Visita a la institución</option>
+                            <option value="Referencia">Industrial</option>
+                            <option value="Internet">Educativo</option>
                         </select>
                     </div>
                 </td>
