--- a/mentores/listar.html
+++ b/mentores/listar.html
@@ -56,25 +56,27 @@
 
 <div id="container" class="container">
 
-    <h1>Lista de Ciclos</h1>
+    <h1>Lista mentores</h1>
 
-    <button onclick="window.location = 'crear.html'" class="btn btn-primary" type="button" value="">Agregar Ciclo</button>
+    <button onclick="window.location = 'crear.html'" class="btn btn-primary" type="button" value="">Agregar mentor</button>
 
     <table class="table table-responsive table-hover">
         <thead>
-            <tr>
-                <th>Ciclo</th>
-                <th>Tipo</th>
-                <th>Fecha Inicio</th>
-                <th>Fecha Termino</th>
-            </tr>
+        <tr>
+            <th>Numero registro</th>
+            <th>Apellido Paterno</th>
+            <th>Apellido Materno</th>
+            <th>Nombre(s)</th>
+            <th>Programa</th>
+        </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Enero-Mayo 2016</td>
-                <td>Semestral</td>
-                <td>18 Enero 2016</td>
-                <td>22 Mayo 2016</td>
+        <tr>
+            <td>1589</td>
+            <td>Espinoza</td>
+            <td>Cervantes</td>
+            <td>Victor Alexis</td>
+            <td>Innovación</td>
                 <td><input onclick="window.location = 'editar.html'" id="BRegistrar" class="btn btn-primary" type="submit" value="Editar"></td>
                 <td><form name=myform>
                     <input type=button id="bdesactivar" class="btn btn-primary" value="Desactivar"
