--- a/aplicar/listar.html
+++ b/aplicar/listar.html
@@ -64,12 +64,11 @@
     <table class="table table-responsive table-hover">
         <thead>
             <tr>
-                <th>Numero pre-registro</th>
+                <th>Numero registro</th>
                 <th>Apellido Paterno</th>
                 <th>Apellido Materno</th>
                 <th>Nombre(s)</th>
-                <th>Licenciatura</th>
-                <th>Ciclo</th>
+                <th>Programa</th>
             </tr>
         </thead>
         <tbody>
@@ -78,8 +77,7 @@
                 <td>Espinoza</td>
                 <td>Cervantes</td>
                 <td>Victor Alexis</td>
-                <td>Comunicación Humana</td>
-                <td>Enero-Mayo 2016</td>
+                <td>Innovación</td>
             </tr>
         </tbody>
     </table>
